# goit-ds-hw-02

./: pyproject.toml
app/: create_data.py  create_db.py  main.py  operations.py  seed.py
app/db/: user_tasks.sql
